ms_utilities/deployment/k8/app-v4.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{service}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    app: #{project-name}#
    pod: #{service}#-pod
  ports:
    - name: http
      targetPort: #{container-port}#
      port: #{service-port}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service}#-deployment
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      pod: #{service}#-pod
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{service}#-pod
        app.bancolombia.com.co/project: #{project-name}#
        version: #{version}#
    spec:
      serviceAccountName: #{service-account-name}#
      containers:
        - name: #{service}#-container
          image: #{image}#
          resources:
            requests:
              memory: "#{memory-request}#Mi"
              cpu: "#{cpu-request}#m"
            limits:
              memory: "#{memory-limits}#Mi"
              cpu: "#{cpu-limits}#m"
          ports:
            - containerPort: #{container-port}#
          readinessProbe:
            httpGet:
              path: #{readinessProbe-path}#
              port: #{readinessProbe-port}#
            periodSeconds: #{readinessProbe-periodSeconds}#
            timeoutSeconds: #{readinessProbe-timeoutSeconds}#
            successThreshold: #{readinessProbe-successThreshold}#
            initialDelaySeconds: #{readinessProbe-initialDelaySeconds}#
          livenessProbe:
            httpGet:
              path: #{livenessProbe-path}#
              port: #{livenessProbe-port}#
            initialDelaySeconds: #{livenessProbe-initialDelaySeconds}#
            failureThreshold: #{livenessProbe-failureThreshold}#
            timeoutSeconds: #{livenessProbe-timeoutSeconds}#
            periodSeconds: #{livenessProbe-periodSeconds}#
            successThreshold: #{livenessProbe-successThreshold}#
          volumeMounts:
            - name: configmap
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: configmap
          configMap:
            name: #{configmap}#
